--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "query-string": "^9.2.2",
     "react": "^19.0.0",
     "react-day-picker": "^9.4.2",
     "react-dom": "^19.0.0",
